# SDA

Colectie (cu rel)/: App.cpp  CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  pseudocod
Colectie (cu rel)/Teste (cu relatie)/: TestExtins.cpp  TestScurt.cpp
Multime/: App.cpp  CMakeLists.txt  IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  Multime.h  nod.h
Multime (cu rel)/: CMakeLists.txt  IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  Multime.h
Problema7/: App.cpp  IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  Multime.h  pseudocod
Problema7/Teste(cu relatie)/: TestScurt.cpp
TAD Matrice/Proiect C++/: CMakeLists.txt  Matrice.cpp  Matrice.h  pseudocod
TAD Matrice/Proiect C++/Teste/: TestScurt.cpp
